# aav-sim

./: .gitignore  CMakeLists.txt  README.md  example_input.ini  main.cpp  main_cart_pole.cpp  quadcopter_anim.py
cart_pole/: CMakeLists.txt  example_input.ini  mpc-robust-plot-data.pkl  mpc-robust-test-cart-pole.py
cart_pole/src/: CartPoleDynamics.h  main.cpp
doc/: mpc-sim-class-diagram.drawio
mpcsim/src/: Controller.h  Cost.h  DDPController.cpp  DDPController.h  Dynamics.h  QuadraticCost.cpp  QuadraticCost.h  QuadraticObstacleCost.h  SamplerController.cpp  SamplerController.h  Simulation.cpp  Simulation.h  System.cpp  System.h
quadcopter/: CMakeLists.txt  example_input.ini  quadcopter_anim.py
quadcopter/src/: QuadcopterDynamics.cpp  QuadcopterDynamics.cpp.in  QuadcopterDynamics.h  main.cpp  quadcopter-dynamics.py
src/: CartPoleDynamics.cpp  CartPoleDynamics.h  Controller.cpp  Controller.h  Cost.cpp  Cost.h  DDPController.cpp  DDPController.h  Dynamics.cpp  Dynamics.h  QuadcopterDynamics.cpp  QuadcopterDynamics.h  QuadraticCost.h  Simulation.cpp  Simulation.h  System.cpp  System.h  main.cpp
src/mpc/control/: Controller.h  DDPController.cpp  DDPController.h  SamplerController.h
src/mpc/cost/: Cost.h  QuadraticCost.h  QuadraticObstacleCost.cpp  QuadraticObstacleCost.h
src/navigation/: PathPlanner.h  RRTPathPlanner.cpp  RRTPathPlanner.h
src/quadcopter/: QuadcopterDynamics.cpp  QuadcopterDynamics.cpp.in  QuadcopterDynamics.h  generate-quadcopter-dynamics.py
src/simulation/: Dynamics.h  Obstacle.h  Simulation.cpp  Simulation.h  SphereObstacle.cpp  SphereObstacle.h  System.h
